CSS fixes for overflow.

--- a/viewer/main.css
+++ b/viewer/main.css
@@ -127,7 +127,6 @@ pre {
 
 .content-container{
 	width: 100%;
-	height: 100%;
 
 	padding: 1rem;
 	font-size: 0.8rem;
@@ -176,6 +175,17 @@ pre {
 	max-width: 100%;
 }
 
+.output_text,
+.output_execute_result {
+	max-width: 100%;
+	overflow-x: auto;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	word-wrap: break-word;
+}
+
 @media only screen and (max-width: 800px) {
 	.content-container{
 		width: 100%;
@@ -209,17 +219,6 @@ pre {
 	
 	img {
 		max-width: 100%;
-	}
-	
-	.output_text,
-	.output_execute_result {
-		max-width: 100%;
-		overflow-x: auto;
-		white-space: pre-wrap;
-		white-space: -moz-pre-wrap;
-		white-space: -pre-wrap;
-		white-space: -o-pre-wrap;
-		word-wrap: break-word;
 	}
 }
 
